# chatgpt_with_django

./: .gitignore  README.md  pyproject.toml
chatbot_with_gpt/: manage.py
chatbot_with_gpt/chat/: urls.py  views.py
chatbot_with_gpt/chatbot_with_gpt/: asgi.py  settings.py  urls.py  wsgi.py
chatbot_with_gpt/static/css/: style.css
chatbot_with_gpt/templates/: base.html  chatbot.html
src/chatgpt/: __init__.py
